# uvl-rust-variant-generation

./: Cargo.toml  LICENSE  README.md
example_car/: Cargo.toml  config.uvl.json  test.dot  test.uvl
example_car/src/: main.rs
feature_model/: car.uvl  car.uvl.json
uvl_macros/: Cargo.toml
uvl_macros/src/: lib.rs
