[package]
name = "uvl_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for UVL-driven compile-time variant generation in Rust"
license = "MIT"
repository = "https://github.com/wernermuench/uvl-rust-variant-generation?tab=readme-ov-file"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
evalexpr = "13.1.0"
toml = "0.9.8"